--- a/src/app/components/mis-componentes/mi-componente.component.html
+++ b/src/app/components/mis-componentes/mi-componente.component.html
@@ -5,13 +5,13 @@
 <h2>{{edad}}</h2>
 <h3>prueba de if</h3>
 <hr/>
-<p>Este es un parrafo de prueba</p>
+<p class="text-primaryl">Este es un parrafo de prueba</p>
 <hr />
 <p>Estos los nuevos componentes creados con</p>
 <p>ng g component nombreCarpeta/nombreComponete</p>
 <hr />
 <peliculas></peliculas>
 <hr/>
-<button (click)="onClick()">Aumentar</button>
+<button class="btn btn-info" (click)="onClick()">Aumentarr</button>
 <button  *ngIf="resultado===false" (click)="disminuir()">Disminuir</button>
 <h1>{{contador}}</h1>
