--- a/src/app/components/pruebas/pruebas.component.html
+++ b/src/app/components/pruebas/pruebas.component.html
@@ -1,1 +1,14 @@
-<p>pruebas works!</p>
+
+<div class="contenedor">
+    <div class="menu bg-info">
+        <p>Maquetacion con angular y bootstraps</p>
+    </div>
+    <div class="contenedorAll">
+        <div class="contenedor-form mt-5">
+            <formulario></formulario>
+        </div>
+        <div class="lista mt-5">
+            <peliculas></peliculas>
+        </div>
+    </div>
+</div>
