--- a/src/app/components/pruebas/pruebas.component.css
+++ b/src/app/components/pruebas/pruebas.component.css
@@ -1,4 +1,27 @@
-p{
-    color: royalblue;
-    font-size: 25px;
+.contenedor{
+   
+}
+.menu{
+    padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    font-family: Arial;
+    font-size: 20px;
+    font-weight: 500;
+    color: aliceblue;
+    width: 100%;
+}
+
+.contenedor-form{
+    padding: 10px;
+    width: 50%;
+}
+
+.lista{
+    width: 50%;
+    padding: 10px;
+}
+
+.contenedorAll{
+    display: flex;
 }
